--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-infinite-scroll-component": "^6.1.1",
     "react-router-dom": "^7.10.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
