--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.2.0",
     "react-infinite-scroll-component": "^6.1.1",
     "react-router-dom": "^7.10.1",
+    "react-window": "^2.2.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -39,6 +40,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-window": "^1.8.8",
     "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
